src/objects/Building__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Available_Desks__c</fullName>
        <label>Available Desks</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Offices__c</fullName>
        <label>Available Offices</label>
        <summaryFilterItems>
            <field>Reservable__c.Status__c</field>
            <operation>equals</operation>
            <value>Available</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Building_ID__c</fullName>
        <externalId>true</externalId>
        <label>Building ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Community Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Buildings</relationshipLabel>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netherlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mexico</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desks_Occupied_Right_Now__c</fullName>
        <label>Desks Occupied Right Now</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Status_Right_Now__c</field>
            <operation>equals</operation>
            <value>Occupied</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Open_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/7/2014</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Desks_Ready_for_Occupany__c</fullName>
        <label>Desks Ready for Occupany</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Open_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/1/2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ID_Last_Sync__c</fullName>
        <label>ID Last Sync</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legal_Licensor_Name__c</fullName>
        <label>Legal Licensor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_No_City__c</fullName>
        <description>Removed NYC- or SF- etc</description>
        <label>Location No City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Tour_Days__c</fullName>
        <defaultValue>21</defaultValue>
        <label>Maximum Tour Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Offices_Occupied_Right_Now__c</fullName>
        <label>Offices Occupied Right Now</label>
        <summaryFilterItems>
            <field>Reservable__c.Status_Right_Now__c</field>
            <operation>equals</operation>
            <value>Occupied</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Open_Date__c</field>
            <operation>lessThan</operation>
            <value>3/1/2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Offices_Ready_for_Occupany__c</fullName>
        <label>Offices Ready for Occupany</label>
        <summaryFilterItems>
            <field>Reservable__c.Open_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>3/1/2014</value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsible_CM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is Community Manager that is responsible for signing the Contracts for the Building.</inlineHelpText>
        <label>Responsible CM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Buildings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Simultaneous_Tours__c</fullName>
        <label>Simultaneous Tours</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone__c</fullName>
        <label>Time Zone</label>
        <picklist>
            <picklistValues>
                <fullName>America/New_York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America/Chicago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America/Denver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>America/Los_Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Jerusalem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe/Amsterdam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asia/Shanghai</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timezone_GMT_Offset__c</fullName>
        <formula>VALUE( 
CASE(Time_Zone__c, 
&quot;America/New_York&quot;, &quot;-4&quot;, 
&quot;America/Chicago&quot;, &quot;-5&quot;, 
&quot;America/Denver&quot;, &quot;-6&quot;, 
&quot;America/Los_Angeles&quot;, &quot;-7&quot;, 
&quot;Europe/London&quot;, &quot;1&quot;, 
&quot;Asia/Jerusalem&quot;, &quot;3&quot;, 
&quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Timezone GMT Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Desks__c</fullName>
        <label>Total Desks</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Offices__c</fullName>
        <formula>Available_Offices__c +  Unavailable_Offices__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Offices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Spacing__c</fullName>
        <label>Tour Spacing</label>
        <picklist>
            <picklistValues>
                <fullName>Half Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hour</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UUID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unavailable_Desks__c</fullName>
        <label>Unavailable Desks</label>
        <summarizedField>Reservable__c.Office_Capacity__c</summarizedField>
        <summaryFilterItems>
            <field>Reservable__c.Status__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Unavailable_Offices__c</fullName>
        <label>Unavailable Offices</label>
        <summaryFilterItems>
            <field>Reservable__c.Status__c</field>
            <operation>equals</operation>
            <value>Unavailable</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Reservable__c.Archived_On__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Reservable__c.Building__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Building</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Building_ID__c</columns>
        <columns>Legal_Licensor_Name__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>Country__c</columns>
        <columns>Time_Zone__c</columns>
        <columns>UUID__c</columns>
        <columns>State__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Locations_with_Salesforce_ID</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Locations with Salesforce ID</label>
    </listViews>
    <listViews>
        <fullName>no_legal_entity</fullName>
        <columns>NAME</columns>
        <columns>Building_ID__c</columns>
        <columns>Legal_Licensor_Name__c</columns>
        <columns>Address__c</columns>
        <columns>City__c</columns>
        <columns>UUID__c</columns>
        <columns>State__c</columns>
        <columns>Postal_Code__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legal_Licensor_Name__c</field>
            <operation>equals</operation>
        </filters>
        <label>No Legal Entity</label>
    </listViews>
    <nameField>
        <label>Building Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Buildings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>